@@ -26,14 +26,16 @@ public:
     // ctor starts the stop watch
     wxStopWatch() { m_pauseCount = 0; Start(); }
 
-    // start the stop watch at the moment t0
+    // Start the stop watch at the moment t0 expressed in milliseconds (i.e.
+    // calling Time() immediately afterwards returns t0). This can be used to
+    // restart an existing stopwatch.
     void Start(long t0 = 0);
 
     // pause the stop watch
     void Pause()
     {
         if ( m_pauseCount++ == 0 )
-            m_pause = GetElapsedTime();
+            m_elapsedBeforePause = GetCurrentClockValue() - m_t0;
     }
 
     // resume it
@@ -43,22 +45,37 @@ public:
                       wxT("Resuming stop watch which is not paused") );
 
         if ( --m_pauseCount == 0 )
-            Start(m_pause);
+        {
+            DoStart();
+            m_t0 -= m_elapsedBeforePause;
+        }
     }
 
-    // get elapsed time since the last Start() in milliseconds
-    long Time() const;
+    // Get elapsed time since the last Start() in microseconds.
+    wxLongLong TimeInMicro() const;
 
-protected:
-    // returns the elapsed time since t0
-    long GetElapsedTime() const;
+    // get elapsed time since the last Start() in milliseconds
+    long Time() const { return (TimeInMicro()/1000).ToLong(); }
 
 private:
-    // the time of the last Start()
+    // Really starts the stop watch. The initial time is set to current clock
+    // value.
+    void DoStart();
+
+    // Returns the current clock value in its native units.
+    wxLongLong GetCurrentClockValue() const;
+
+    // Return the frequency of the clock used in its ticks per second.
+    wxLongLong GetClockFreq() const;
+
+
+    // The clock value when the stop watch was last started. Its units vary
+    // depending on the platform.
     wxLongLong m_t0;
 
-    // the time of the last Pause() (only valid if m_pauseCount > 0)
-    long m_pause;
+    // The elapsed time as of last Pause() call (only valid if m_pauseCount >
+    // 0) in the same units as m_t0.
+    wxLongLong m_elapsedBeforePause;
 
     // if > 0, the stop watch is paused, otherwise it is running
     int m_pauseCount;
